--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -4,5 +4,15 @@
 </head>
 <body>
 <h1>Hello</h1>
+<h1>Good morning</h1>
+
+
+<form action="">
+
+    <input name="email" type="text">
+    <input name="submit" type="submit">
+
+</form>
+
 </body>
 </html>
