--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -1,10 +1,12 @@
 <html>
 <head>
-    <link rel="stylesheet" href="d.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Hello</h1>
 <h1>Good morning</h1>
+
+<a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
 
 
 <form action="">
@@ -13,6 +15,9 @@
     <input name="submit" type="submit">
 
 </form>
+<br>
+<p> <a href="i.html">secoud page</a>  </p>
+
 
 </body>
 </html>
